--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "gatsby": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "gatsby-plugin-postcss": "^4.1.0",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^2.0.4"
   }
 }
