--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@firebase/app": "^0.6.17",
+    "firebase": "^8.3.1",
     "gatsby": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
